--- a/src/styles.css
+++ b/src/styles.css
@@ -105,3 +105,5 @@ body {
 .login-wrapper .mat-form-field-appearance-legacy .mat-form-field-infix {
   padding: 0.8375em 0;
 }
+
+@import "~bootstrap/dist/css/bootstrap.css";
