--- a/src/app/components/company/company.component.html
+++ b/src/app/components/company/company.component.html
@@ -29,6 +29,14 @@
       <th mat-header-cell *matHeaderCellDef> Lider </th>
       <td mat-cell *matCellDef="let enterprise"> {{enterprise.users}} </td>
     </ng-container>
+
+    <ng-container matColumnDef="see">
+      <th mat-header-cell *matHeaderCellDef> Eliminar </th>
+      <td mat-cell *matCellDef="let enterprise"> 
+        <button mat-fab color="warn" aria-label="Example icon button with a delete icon" (click)="deleteCompany(enterprise.id)">
+        <mat-icon>delete</mat-icon>
+      </button> </td>
+    </ng-container>
   
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
