--- a/src/app/components/create-transaction/create-transaction.component.html
+++ b/src/app/components/create-transaction/create-transaction.component.html
@@ -1,1 +1,27 @@
-<p>create-transaction works!</p>
+<div class="login-wrapper" fxLayout="row" fxLayoutAlign="center center">
+    <mat-card class="box">
+      <mat-card-header>
+        <mat-card-title>Nuevo Movimiento de Dinero</mat-card-title>
+      </mat-card-header>
+  
+      <form [formGroup]="companyForm" (ngSubmit)="guardar()">
+  
+        <mat-card-content>
+          <mat-form-field class="example-full-width">
+            <input matInput placeholder="Monto" formControlName="name" type="number">
+          </mat-form-field>
+  
+          <mat-form-field class="example-full-width">
+            <input matInput placeholder="Concepto" formControlName="concepto">
+          </mat-form-field>
+          <mat-form-field class="example-full-width">
+            <input matInput placeholder="Fecha" formControlName="createdAt" type="date">
+          </mat-form-field>
+  
+        </mat-card-content>
+  
+        <button mat-stroked-button color="accent" class="btn-block">Crear empresa</button>
+  
+      </form>
+    </mat-card>
+  </div>
